--- a/BTLv1/BTLv1.csproj
+++ b/BTLv1/BTLv1.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,6 +63,18 @@
   <ItemGroup>
     <Compile Include="Classv1.cs" />
     <Compile Include="Classv2.cs" />
+    <Compile Include="DoiTen_DoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoiTen_DoiMatKhau.Designer.cs">
+      <DependentUpon>DoiTen_DoiMatKhau.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DoiTen_DoiMatKhau_Check.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoiTen_DoiMatKhau_Check.Designer.cs">
+      <DependentUpon>DoiTen_DoiMatKhau_Check.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainScreen1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +102,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticDataClassv2.cs" />
+    <EmbeddedResource Include="DoiTen_DoiMatKhau.resx">
+      <DependentUpon>DoiTen_DoiMatKhau.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DoiTen_DoiMatKhau_Check.resx">
+      <DependentUpon>DoiTen_DoiMatKhau_Check.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainScreen1.resx">
       <DependentUpon>MainScreen1.cs</DependentUpon>
     </EmbeddedResource>
@@ -108,6 +141,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
